--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Football</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<section class="top-section">
+    <div>
+        <h1 id="head-color">Conmebol Copa America 2021 </h1>
+
+        <button type="button">Watch Now!</button>
+
+    </div>
+</section>
 
 <body>
 
