--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <div>
         <h1 id="head-color">Conmebol Copa America 2021 </h1>
 
-        <button type="button">Watch Now!</button>
+        <button class="button"> <span> Watch Now! </span></button>
 
+    </div>
+    <div>
+        <img class="banner" src="/football/images/banner.png" alt="">
     </div>
 </section>
 
