--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
     </style>
 </head>
-<section class="top-section">
-    <div>
-        <h1 id="head-color">Conmebol Copa America 2021 </h1>
-
-        <button class="button"> <span> Watch Now! </span></button>
-
-    </div>
-    <div>
-        <img class="banner" src="/football/images/banner.png" alt="">
-    </div>
-</section>
 
 <body>
+
+    <section class="top-section">
+
+        <div>
+            <h1 id="head-color">Conmebol Copa America 2021
+
+            </h1>
+
+            <button class="button"> <span> Watch Now! </span></button>
+
+        </div>
+        <div>
+            <img class="banner" src="/football/images/banner.png" alt="" width="556" height="438">
+        </div>
+    </section>
+
+
 
 </body>
 
