--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <section class="top-section">
 
         <div>
-            <h1 id="head-color">Conmebol Copa America 2021
-
-            </h1>
+            <h1 id="head-color">Conmebol Copa America 2021</h1>
 
             <button class="button"> <span> Watch Now! </span></button>
 
@@ -29,7 +27,117 @@
         </div>
     </section>
 
+    <section class="main-body">
 
+        <div class="player-box">
+            <img src="/football/images/players/player-1.png" alt="" width="300" height="256">
+
+            <h1>
+                Neymar Jr
+            </h1>
+            <p class="player-details">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+
+        </div>
+        <div class="player-box">
+            <img src="/football/images/players/player-2.png" alt="" width="300" height="256">
+
+            <h1>
+                Lionel Messi
+            </h1>
+            <p class="player-details">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+
+        </div>
+        <div class="player-box">
+            <img src="/football/images/players/player-3.png" alt="" width="300" height="256">
+
+            <h1>
+                Cristiano Ronaldo
+            </h1>
+            <p class="player-details">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+
+        </div>
+        <div class="player-box">
+            <img src="/football/images/players/player-4.png" alt="" width="300" height="256">
+
+            <h1>
+                Paulo Dybala
+            </h1>
+            <p class="player-details">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+
+        </div>
+        <div class="player-box">
+            <img src="/football/images/players/player-5.png" alt="" width="300" height="256">
+
+            <h1>
+                Mesut Ozil
+            </h1>
+            <p class="player-details">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+
+        </div>
+        <div class="player-box">
+            <img src="/football/images/players/player-6.png" alt="" width="300" height="256">
+
+            <h1>
+                Mauro Icardi
+            </h1>
+            <p class="player-details">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+
+        </div>
+        <div class="player-box">
+            <img src="/football/images/players/player-7.png" alt="" width="300" height="256">
+
+            <h1>
+                Di Maria
+            </h1>
+            <p class="player-details">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+
+        </div>
+        <div class="player-box">
+            <img src="/football/images/players/player-8.png" alt="" width="300" height="256">
+
+            <h1>
+                Kylian Mbappé
+            </h1>
+            <p class="player-details">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+
+        </div>
+        <div class="player-box">
+            <img src="/football/images/players/player-9.png" alt="" width="300" height="256">
+
+            <h1>
+                Mohamed Salah
+            </h1>
+            <p class="player-details">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+                lectus at.
+            </p>
+
+        </div>
+    </section>
 
 </body>
 
