--- a/index.html
+++ b/index.html
@@ -139,6 +139,31 @@
         </div>
     </section>
 
+    <section class="bottom-section">
+
+
+        <div class="bottom-text1">
+            <h1>
+                All Highlights Copa America 2021
+            </h1>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                duis
+                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            <button class="button"> <span> Watch Now! </span></button>
+        </div>
+        <div>
+            <img src="/football/images/match.png" alt="" srcset="" width="567" height="427">
+        </div>
+
+
+    </section>
+
+    <footer class="footer">
+        <img src="/football/images/Logo.png" alt="" srcset="" width="300" height="210">
+    </footer>
+
 </body>
 
 </html>
