--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
     </style>
+    <script src="https://kit.fontawesome.com/b56e64b608.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -160,8 +161,24 @@
 
     </section>
 
-    <footer class="footer">
-        <img src="/football/images/Logo.png" alt="" srcset="" width="300" height="210">
+    <footer style="text-align:center;">
+
+        <div class="fdiv">
+            <img src="/football/images/Logo.png" alt="" srcset="" width="200" height="100">
+        </div>
+
+        <div class="fdiv">
+            <a href="http://facebook.com"> <i class="fab fa-facebook"></i> </a>
+            <a href="http://twitter.com"> <i class="fab fa-twitter"></i> </a>
+            <a href="https://instagram.com"> <i class="fab fa-instagram"></i> </a>
+            <a href="https://youtube.com"> <i class="fas fa-heart"></i> </a>
+        </div>
+
+        <div class="fdiv">
+            <p>Copyright © 2022 Football </p>
+        </div>
+
+
     </footer>
 
 </body>
